[package]
name = "payment-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.137",  features = ["derive"] }
rust_decimal = { version = "1.23.1", features = ["serde-str"]}
rust_decimal_macros = "1.23.1"
futures = "0.3.21"
itertools = "0.10.3"
